tests/matrices/invalid/invalid_indices_out_of_range_1.mtx
%%MatrixMarket matrix coordinate real general
7 7 12
2 1 1
4 1 1
5000 2 1
7 2 1
6 3 1
1 4 1
3 4 1
6 5 1
3 6 1
3 7 1
4 7 1
5 7 1
